<resources>
    <string name="app_name">BusLocator</string>
    <string name="titleHome">Inicio</string>
    <string name="titleSeccion">Encuentra ...</string>
    <string name="titleTransp">Transportes</string>
    <string name="titleRutas">Rutas</string>
    <string name="titleParaderos">Paraderos</string>
    <string name="titleConf">Configuración</string>
    <string name="titleSalir">Salir</string>

    <string name="titleSearch">Buscador</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_route_fragment">Rutas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_bustop_fragment">Paraderos</string>
    <string name="title_activity_register">Acceso de cuentas</string>

    <!-- Strings related to login -->
    <string name="hintUserSignIn">Usuario</string>
    <string name="hintUserSignUp">Usuario</string>
    <string name="hintEmail">Correo electrónico</string>
    <string name="hintFullName">Nombre completo</string>
    <string name="hintPass">Contraseña</string>
    <string name="btnSignIn">Ingresar</string>
    <string name="btnSignUp">Registrar</string>

    <string name="textRegister">¿No tiene una cuenta? Cree una</string>
    <string name="HeaderRegister">Regístrese y acceda a los beneficios de nuestra app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_route">Map</string>

</resources>
