<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/titleSeccion">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_transp"
                    android:title="@string/titleTransp"
                    android:icon="@mipmap/ic_bus"/>
                <item
                    android:id="@+id/nav_routes"
                    android:title="@string/titleRutas"
                    android:icon="@mipmap/ic_route"/>
                <item
                    android:id="@+id/nav_bustop"
                    android:title="@string/titleParaderos"
                    android:icon="@mipmap/ic_bustop"/>
            </group>
        </menu>
    </item>

    <group
        android:checkableBehavior="single">
        <item
            android:title="@string/titleConf"
            android:icon="@android:drawable/ic_menu_manage"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/titleSalir"
            android:icon="@android:drawable/ic_lock_power_off"/>
    </group>
</menu>